[package]
name = "mdlroptimizer"
version = "0.1.0"
authors = ["Nebula Venus <6595784+Nebulavenus@users.noreply.github.com>"]
edition = "2018"

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'

[dependencies]
clap = "2.33.0"
pest = "2.1.2"
pest_derive = "2.1.0"
regex = "1"
lazy_static = "1.4.0"
took = "0.1.2"
took-macro = "0.1.1"
walkdir = "2.2.9"
itertools = "0.8.2"